Test on heroku for new gem

--- a/app/views/tokens/show.html.erb
+++ b/app/views/tokens/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Tokens#show</h1>
-<p>Find me in app/views/tokens/show.html.erb</p>
+<h1>Thank you for using <%= Rails.application.module_parent.name %></h1>
+<p>You can now close this window.</p>
