Fix module_parent error

--- a/app/views/tokens/show.html.erb
+++ b/app/views/tokens/show.html.erb
@@ -1,2 +1,2 @@
-<h1>Thank you for using <%= Rails.application.module_parent.name %></h1>
+<h1>Thank you for using <%= Rails.application.class.module_parent.name %></h1>
 <p>You can now close this window.</p>
